<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_main_container"
        android:layout_width="393dp"
        android:layout_height="829dp"
        android:background="@color/bg_course_main_page_color">

        <TextView
            android:id="@+id/course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:alpha="0.8"
            android:text="@string/course_string"
            android:textColor="@color/black"
            android:textSize="53sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/introduce_course"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:outlineAmbientShadowColor="@color/black"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/course">


            <TextView
                android:id="@+id/course_number_1"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="01"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_1_title_text"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/course_arrow_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_1_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addition_course"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/introduce_course"
            app:layout_constraintStart_toStartOf="@+id/introduce_course"
            app:layout_constraintTop_toBottomOf="@+id/introduce_course">

            <TextView
                android:id="@+id/normal_puzzle_number"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="02"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_2_title_text"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/course_arrow_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_2_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/subtraction_course"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:outlineAmbientShadowColor="@color/black"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/addition_course"
            app:layout_constraintStart_toStartOf="@+id/addition_course"
            app:layout_constraintTop_toBottomOf="@+id/addition_course">

            <TextView
                android:id="@+id/course_number_3"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.5"
                android:text="03"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_title_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_3_title_text"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/course_arrow_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_3_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/multiplication_course"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:outlineAmbientShadowColor="@color/black"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/subtraction_course"
            app:layout_constraintStart_toStartOf="@+id/subtraction_course"
            app:layout_constraintTop_toBottomOf="@+id/subtraction_course">

            <TextView
                android:id="@+id/course_number_4"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="04"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_4_title_text"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold"
                app:cardCornerRadius="10dp" />

            <ImageButton
                android:id="@+id/course_arrow_4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_4_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/division_course"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:outlineAmbientShadowColor="@color/black"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/multiplication_course"
            app:layout_constraintStart_toStartOf="@+id/multiplication_course"
            app:layout_constraintTop_toBottomOf="@+id/multiplication_course">

            <TextView
                android:id="@+id/course_number_5"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.5"
                android:text="05"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_title_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/course_5_title_text"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/course_arrow_5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/course_5_descript"
                app:srcCompat="@drawable/ic_arrow_left" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>